--- a/ฝึกhtml/js/CC.html
+++ b/ฝึกhtml/js/CC.html
@@ -33,12 +33,12 @@
 
         }
         #section2{
-            
+
         }
         #section3{
 
         }
-        #scetion4{
+        #section4{
 
         }
         #section5{
@@ -47,7 +47,7 @@
         footer{
 
         }
-        .footer-container{
+        .footer-container {
 
         }
         .footer-container p,.footer-bottom p{
@@ -71,28 +71,28 @@
     <section class="events-page">
         <div id="section1" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section2" class="event"></div>
+        <div id="section1" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section3" class="event"></div>
+        <div id="section1" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section4" class="event"></div>
+        <div id="section1" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section5" class="event"></div>
+        <div id="section1" class="event"></div>
+        <div style="padding: 20px;"></div>
     </section>
     <footer>
         <div class="footer-container">
             <div class="footer-item">
-                <h3></h3>
+                <h3>About</h1>
                 <p></p>
             </div>
             <div class="footer-item">
-                <h3></h3>
-                <p></p>
+                <h3>Contact</h1>
                 <p></p>
             </div>
         </div>
         <div class="footer-bottom">
-            <p></p>
+            <p>&copy; 2024 PT.</p>
         </div>
     </footer>
 </body>
